--- a/src/main/webapp/layuiadmin/map/allMap.html
+++ b/src/main/webapp/layuiadmin/map/allMap.html
@@ -206,8 +206,9 @@
 		var points = []; // 添加海量点数据
 		var points1 = [];
 		var points2 = [];
+		var points3 = [];
 		var points0 = [];
-		var pointCollection, pointCollection1, pointCollection2, pointCollection0;
+		var pointCollection, pointCollection1, pointCollection2,pointCollection3,pointCollection0;
 
 		//默认颜色
 		var options1 = {
@@ -239,46 +240,71 @@
 			shape: BMAP_POINT_SHAPE_STAR,
 			color: '#0000FF'
 		}
+		//无证经营颜色
+		var options6 = {
+			size: BMAP_POINT_SIZE_SMALL,
+			shape: BMAP_POINT_SHAPE_STAR,
+			color: '#000000'
+		}
+		
+		console.log(ticket);
+
 		for (var i = 0; i < ticket.length; i++) {
-			if(ticket[i].weight==1){
+			if (ticket[i].weight == 1) {
 				points0.push(new BMap.Point(ticket[i].lng, ticket[i].lat));
 				pointCollection0 = new BMap.PointCollection(points0, options5);
-			}else{
-				if (ticket[i].criminal_number == 0) {
+			} else {
+				if (ticket[i].case_count == 0) {
 					points.push(new BMap.Point(ticket[i].lng, ticket[i].lat));
 					pointCollection = new BMap.PointCollection(points, options1);
-				} else if (ticket[i].criminal_number == 1) {
+				} else if (ticket[i].case_count == 1&&ticket[i].fake_number<50&&ticket[i].not_channel_number<5000) {
 					points1.push(new BMap.Point(ticket[i].lng, ticket[i].lat));
-					pointCollection1 = new BMap.PointCollection(points1,options3);
-				} else if (ticket[i].criminal_number > 1) {
+					pointCollection1 = new BMap.PointCollection(points1, options3);
+				} else if (ticket[i].case_count > 1||ticket[i].fake_number>=50||ticket[i].not_channel_number>=5000) {
 					points2.push(new BMap.Point(ticket[i].lng, ticket[i].lat));
-					pointCollection2 = new BMap.PointCollection(points2,options4);
+					pointCollection2 = new BMap.PointCollection(points2, options4);
+				}else if (ticket[i].case_count == -1) {
+					points3.push(new BMap.Point(ticket[i].lng, ticket[i].lat));
+					pointCollection3 = new BMap.PointCollection(points3, options6);
 				}
 			}
+
 		}
+
 		if (pointCollection != null) {
 			pointCollection.addEventListener('click', function (e) {
 				openwindow(e.point.lng, e.point.lat);
-			});
+			})
 		}
+
 		if (pointCollection1 != null) {
 			pointCollection1.addEventListener('click', function (e) {
 				openwindow(e.point.lng, e.point.lat);
-			});
+			})
 		}
+
 		if (pointCollection2 != null) {
 			pointCollection2.addEventListener('click', function (e) {
 				openwindow(e.point.lng, e.point.lat);
-			});
+			})
 		}
+
+		if (pointCollection3 != null) {
+			pointCollection3.addEventListener('click', function (e) {
+				openwindow(e.point.lng, e.point.lat);
+			})
+		}
+		
 		if (pointCollection0 != null) {
 			pointCollection0.addEventListener('click', function (e) {
 				openwindow(e.point.lng, e.point.lat);
-			});
+			})
 		}
+
 		map.addOverlay(pointCollection); // 添加Overlay
 		map.addOverlay(pointCollection1); // 添加Overlay
 		map.addOverlay(pointCollection2); // 添加Overlay
+		map.addOverlay(pointCollection3); // 添加Overlay
 		map.addOverlay(pointCollection0); // 添加Overlay
 
 	}
@@ -293,9 +319,15 @@
 		xhm.send();
 		var data = JSON.parse(xhm.responseText);
 		var license = data.license;
+		var url;
+		if(data.type==1){
+			url="../../mobile/user/getRoomInfoByGUID.do";
+		}else if(data.type==0){
+			url="../../mobile/user/getNotLicenseByID.do";
+		}
 		$.ajax({
 			type: "POST",
-			url: "../../mobile/user/getRoomInfoByGUID.do",
+			url: url,
 			data: {
 				"license": license
 			},
@@ -304,7 +336,9 @@
 				console.log(request);
 			},
 			success: function (result) {
-				var content = "<h4 style='margin:0 0 5px 0;padding:0.2em 0'> 烟点位置: "
+				var content;
+				if(data.type==1){	
+					content= "<h4 style='margin:0 0 5px 0;padding:0.2em 0'> 烟点位置: "
 					+ result.roomInfo.address
 					+ "</h4>"
 					+ "<img style='float:right;margin:4px' id='imgDemo' src=/ycglj" + result.fileBytes[0].uri + " width='139' height='104'/>"
@@ -317,6 +351,9 @@
 					+ " "
 					+ " 许可证号 : "
 					+ result.roomInfo.license
+				}else if(data.type==0){
+					content=result.text;
+				}
 				var infoWindow = new BMap.InfoWindow(content); // 创建信息窗口对象
 				map.openInfoWindow(infoWindow, new BMap.Point(
 					lng, lat)); //开启信息窗口
