--- a/src/main/webapp/mobile/auditor/index2.html
+++ b/src/main/webapp/mobile/auditor/index2.html
@@ -203,7 +203,7 @@
               <img src="../asset/images/case.png" alt="">
             </div>
             <p class="weui-grid__label">
-              案件录入
+              信息维护
             </p>
           </a>
           <a id="echart" href="javascript:void(0)" class="weui-grid js_grid">
@@ -211,10 +211,10 @@
               <img src="../asset/images/chart.png" alt="">
             </div>
             <p class="weui-grid__label">
-              信息统计
+              数据统计
             </p>
           </a>
-          <a id="b4" href="advice.html" class="weui-grid js_grid">
+          <a id="assist" href="assist.html" class="weui-grid js_grid">
             <div class="weui-grid__icon">
               <img src="../asset/images/sup.png" alt="">
             </div>
@@ -423,7 +423,7 @@
       $('#position').css("background-color", "#904343");
       $('#case').css("background-color", "#925f39");
       $('#echart').css("background-color", "#304c68");
-      $('#b4').css("background-color", "#77a3ad");
+      $('#assist').css("background-color", "#77a3ad");
       $('#echart').click(function () {
         window.location.href = "echart.html";
       });
