--- a/src/main/webapp/mobile/asset/onlineregs/index.html
+++ b/src/main/webapp/mobile/asset/onlineregs/index.html
@@ -49,7 +49,7 @@
 					新办
 				</p>
 			</a>
-			<a href="" class="weui-grid js_grid" style="background-color: #f2b86e">
+			<a href="stop/stop.html" class="weui-grid js_grid" style="background-color: #f2b86e">
 				<div class="weui-grid__icon">
 						<img src="../images/tingye.png" alt="">
 				</div>
