--- a/src/main/webapp/mobile/asset/onlineregs/stop/stop.html
+++ b/src/main/webapp/mobile/asset/onlineregs/stop/stop.html
@@ -59,7 +59,7 @@
 <body>
     <div class="content">
         <p class="pTitle">停业办理须知</p>
-        <p>烟草专卖许可证管理办法实施明细</p>
+        <p style="text-align: center">烟草专卖许可证管理办法实施明细</p>
         <p>第十五条持证人需要暂停生产经营行为的，应当在停业前7日提出停业申请。停业期限最长不得超过1年且不得超过许可证的有效期。</p>
     </div>
     <div class="agree">
@@ -71,13 +71,28 @@
         </label>
     </div>
     <div class="footer">
-        <a href="javascript:;" onclick="" class="weui-btn_mini weui-btn weui-btn_warn">关 闭</a>
+        <a id="continue" href="javascript:;" class="weui-btn weui-btn_mini weui-btn_primary">继续申请</a>
+        <a id="close" href="javascript:;" onclick="" class="weui-btn_mini weui-btn weui-btn_warn">关 闭</a>
     </div>
     </div>
 </body>
 <script src="https://cdn.bootcss.com/jquery/1.11.0/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/jquery-weui/1.2.1/js/jquery-weui.min.js"></script>
 <script>
+    $('#close').click(function () {
+        window.location.href = "../index.html";
+    })
+    $('#continue').click(function () {
+        if ($('#weuiAgree').get(0).checked) {
+            console.log("选中");
+            window.location.href = "index.html";
+            // window.location.href = "order/registration.html";
+        }
+        //关闭弹层
+        else {
+            $.toast('请勾选协议', "forbidden");
+        }
+    })
 </script>
 
 </html>
