--- a/src/main/webapp/mobile/asset/onlineregs/again/again.html
+++ b/src/main/webapp/mobile/asset/onlineregs/again/again.html
@@ -58,7 +58,7 @@
 
 <body>
     <div class="content">
-            <p class="pTitle">申请成功</p>
+            <p class="pTitle">恢复营业办理须知</p>
             <p style="text-align: center">《烟草专卖许可证管理办法实施细则》</p>
             <p>第十六条停业期满或者，持证人应当及时提出恢复营业申请。持证人停业期满未，属于《烟草专卖管理办法》第五十条规定的情形。</p>
             <p style="text-align: center">《烟草专卖许可证管理办法》</p>
