--- a/src/main/webapp/mobile/asset/onlineregs/again/index.html
+++ b/src/main/webapp/mobile/asset/onlineregs/again/index.html
@@ -95,6 +95,12 @@
 				<input class="weui-input" id="license" type="text" placeholder="请输入您的许可证号">
 			</div>
 		</div>
+		<div class="weui-cell">
+			<div class="weui-cell__hd"><label class="weui-label">联系电话</label></div>
+			<div class="weui-cell__bd">
+				<input class="weui-input" id="phone" type="text" placeholder="请输入您的联系电话">
+			</div>
+		</div>
 
 		<a class="weui-cell weui-cell_access" onclick="setActionSheet('identity')" href="javascript:;">
 			<div id="img1" name="0" class="weui-panel__bd">
