--- a/src/main/webapp/mobile/asset/onlineregs/index.html
+++ b/src/main/webapp/mobile/asset/onlineregs/index.html
@@ -57,7 +57,7 @@
 					停业
 				</p>
 			</a>
-			<a href="" class="weui-grid js_grid" style="background-color:#ee7e7a">
+			<a href="../order/registration.html" class="weui-grid js_grid" style="background-color:#ee7e7a">
 				<div class="weui-grid__icon">
 					<img src="../images/yanxu.png" alt="">
 				</div>
@@ -65,7 +65,7 @@
 					延续
 				</p>
 			</a>
-			<a href="" class="weui-grid js_grid" style="background-color: #ec7094">
+			<a href="buban/buban.html" class="weui-grid js_grid" style="background-color: #ec7094">
 				<div class="weui-grid__icon">
 					<img src="../images/buban.png" alt="">
 				</div>
@@ -73,7 +73,7 @@
 					补办
 				</p>
 			</a>
-			<a href="" class="weui-grid js_grid" style="background-color:#84737d">
+			<a href="again/again.html" class="weui-grid js_grid" style="background-color:#84737d">
 				<div class="weui-grid__icon">
 					<img src="../images/huifuyingye.png" alt="">
 				</div>
@@ -81,7 +81,7 @@
 					恢复营业
 				</p>
 			</a>
-			<a href="" class="weui-grid js_grid" style="background-color:#60c67d">
+			<a href="biangen/biangen.html" class="weui-grid js_grid" style="background-color:#60c67d">
 				<div class="weui-grid__icon">
 					<img src="../images/biangeng.png" alt="">
 				</div>
@@ -89,7 +89,7 @@
 					变更
 				</p>
 			</a>
-			<a href="" class="weui-grid js_grid" style="background-color:#a07eee">
+			<a href="xieye/xieye.html" class="weui-grid js_grid" style="background-color:#a07eee">
 				<div class="weui-grid__icon">
 					<img src="../images/xieye.png" alt="">
 				</div>
