--- a/src/main/webapp/mobile/asset/onlineregs/new/index.html
+++ b/src/main/webapp/mobile/asset/onlineregs/new/index.html
@@ -101,8 +101,31 @@
 		<p>(四)国家烟草专卖局规定的其他条件。</p>
 	</div>
 	<div class="weui-cells__title">您的基本信息</div>
-
-	<div class="weui-cells">
+	<!-- <form action="" novalidate>
+			<div class="weui-cells weui-cells_form">
+				<div class="weui-cell">
+					<div class="weui-cell__hd"><label class="weui-label">地址</label></div>
+					<input class="weui-input" id="name" type="text" placeholder="请输入您的姓名">
+					</div>
+				</div>
+			</div>
+			<div class="weui-cells weui-cells_form">
+				<div class="weui-cell">
+					<div class="weui-cell__hd"><label class="weui-label">身份证号</label></div>
+					<div id="name" class="weui-cell__bd">
+							<input class="weui-input" id="name" type="text" placeholder="请输入您的姓名">
+					</div>
+				</div>
+			</div>
+			<div class="weui-cells weui-cells_form">
+				<div class="weui-cell">
+					<div class="weui-cell__hd"><label class="weui-label">联系电话</label></div>
+					<div id="phone" class="weui-cell__bd">
+							<input class="weui-input" id="name" type="text" placeholder="请输入您的姓名">
+					</div>
+				</div>
+			</div>
+		</form> -->
 		<div class="weui-cell">
 			<div class="weui-cell__hd"><label for="date" class="weui-label">姓 名</label></div>
 			<div class="weui-cell__bd">
